Update API key and folder ID in index.html
Updated Google Drive API key and folder ID in index.html.

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
     <script>
         // === CONFIG ===
-        const API_KEY_DRIVE = 'TU_GOOGLE_DRIVE_API_KEY';
-        const CARPETA_ID = 'ID_CARPETA_DRIVE';
+        const API_KEY_DRIVE = 'AIzaSyDhovxf0Fz9b5KfmCKzOGH3NuWfjGeByrY';
+        const CARPETA_ID = 'https://photos.app.goo.gl/8FneEkAkuGG3Q66C8';
         const WEATHER_KEY = 'TU_OPENWEATHER_API_KEY'; // openweathermap.org
         const LAT_MADRID = 40.4168; const LON_MADRID = -3.7038;
         
