Update OpenWeather API key in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         // === CONFIG ===
         const API_KEY_DRIVE = 'AIzaSyDhovxf0Fz9b5KfmCKzOGH3NuWfjGeByrY';
         const CARPETA_ID = 'https://photos.app.goo.gl/8FneEkAkuGG3Q66C8';
-        const WEATHER_KEY = 'TU_OPENWEATHER_API_KEY'; // openweathermap.org
+        const WEATHER_KEY = '061eaa539b2f8f2eecfa8836f7a48c34'; // openweathermap.org
         const LAT_MADRID = 40.4168; const LON_MADRID = -3.7038;
         
         let fotos = []; let indiceActual = 0; let intervaloFotos;
